eclipse_workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:32:27 **** Clean-only build of configuration Debug for project tiva-uart5 ****
make clean 
rm -rf  ./bsp.o ./main.o ./startup_TM4C123.o ./system_TM4C123.o  tiva-uart5.hex  tiva-uart5.siz  ./bsp.d ./main.d ./startup_TM4C123.d ./system_TM4C123.d  tiva-uart5.elf
 
15:32:29 **** Build of configuration Debug for project tiva-uart5 ****
make all 
Building file: ../bsp.c
Invoking: GNU Arm Cross C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mlittle-endian -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -Wall  -g3 -DTM4C123GH6PM -std=gnu11 -MMD -MP -MF"bsp.d" -MT"bsp.o" -c -o "bsp.o" "../bsp.c"
Finished building: ../bsp.c
 
Building file: ../main.c
Invoking: GNU Arm Cross C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mlittle-endian -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -Wall  -g3 -DTM4C123GH6PM -std=gnu11 -MMD -MP -MF"main.d" -MT"main.o" -c -o "main.o" "../main.c"
../main.c: In function 'UART0_Handler':
../main.c:38:12: warning: passing argument 1 of 'printchar' makes integer from pointer without a cast [-Wint-conversion]
   38 |  printchar(convert_num(rx_data,16));
      |            ^~~~~~~~~~~~~~~~~~~~~~~
      |            |
      |            char *
../main.c:18:21: note: expected 'char' but argument is of type 'char *'
   18 | void printchar(char c);
      |                ~~~~~^
../main.c: In function 'printchar':
../main.c:153:21: error: invalid type argument of unary '*' (have 'int')
  153 |   UART0_Transmitter(*(c));
      |                     ^~~~
subdir.mk:27: recipe for target 'main.o' failed
make: *** [main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
15:32:59 **** Incremental Build of configuration Debug for project tiva-uart5 ****
make all 
Building file: ../main.c
Invoking: GNU Arm Cross C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mlittle-endian -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -Wall  -g3 -DTM4C123GH6PM -std=gnu11 -MMD -MP -MF"main.d" -MT"main.o" -c -o "main.o" "../main.c"
../main.c: In function 'UART0_Handler':
../main.c:38:12: warning: passing argument 1 of 'printchar' makes integer from pointer without a cast [-Wint-conversion]
   38 |  printchar(convert_num(rx_data,16));
      |            ^~~~~~~~~~~~~~~~~~~~~~~
      |            |
      |            char *
../main.c:18:21: note: expected 'char' but argument is of type 'char *'
   18 | void printchar(char c);
      |                ~~~~~^
Finished building: ../main.c
 
Building file: ../startup_TM4C123.c
Invoking: GNU Arm Cross C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mlittle-endian -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -Wall  -g3 -DTM4C123GH6PM -std=gnu11 -MMD -MP -MF"startup_TM4C123.d" -MT"startup_TM4C123.o" -c -o "startup_TM4C123.o" "../startup_TM4C123.c"
Finished building: ../startup_TM4C123.c
 
Building file: ../system_TM4C123.c
Invoking: GNU Arm Cross C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mlittle-endian -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -Wall  -g3 -DTM4C123GH6PM -std=gnu11 -MMD -MP -MF"system_TM4C123.d" -MT"system_TM4C123.o" -c -o "system_TM4C123.o" "../system_TM4C123.c"
Finished building: ../system_TM4C123.c
 
Building target: tiva-uart5.elf
Invoking: GNU Arm Cross C Linker
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mlittle-endian -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -Wall  -g3 -T "/home/vksalian/Desktop/Practice_2021/UART_TIVAC/eclipse_workspace/tiva-uart5/tm4c123gh6pm.ld" -nostdlib -Wl,-Map,"tiva-uart5.map" -o "tiva-uart5.elf"  ./bsp.o ./main.o ./startup_TM4C123.o ./system_TM4C123.o   
Finished building target: tiva-uart5.elf
 
Invoking: GNU Arm Cross Create Flash Image
arm-none-eabi-objcopy -O ihex "tiva-uart5.elf"  "tiva-uart5.hex"
Finished building: tiva-uart5.hex
 
Invoking: GNU Arm Cross Print Size
arm-none-eabi-size --format=berkeley "tiva-uart5.elf"
   text	   data	    bss	    dec	    hex	filename
   3784	     24	    264	   4072	    fe8	tiva-uart5.elf
Finished building: tiva-uart5.siz
 
15:34:03 **** Incremental Build of configuration Debug for project tiva-uart5 ****
make all 
Building file: ../main.c
Invoking: GNU Arm Cross C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mlittle-endian -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -Wall  -g3 -DTM4C123GH6PM -std=gnu11 -MMD -MP -MF"main.d" -MT"main.o" -c -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: tiva-uart5.elf
Invoking: GNU Arm Cross C Linker
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mlittle-endian -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -Wall  -g3 -T "/home/vksalian/Desktop/Practice_2021/UART_TIVAC/eclipse_workspace/tiva-uart5/tm4c123gh6pm.ld" -nostdlib -Wl,-Map,"tiva-uart5.map" -o "tiva-uart5.elf"  ./bsp.o ./main.o ./startup_TM4C123.o ./system_TM4C123.o   
Finished building target: tiva-uart5.elf
 
Invoking: GNU Arm Cross Create Flash Image
arm-none-eabi-objcopy -O ihex "tiva-uart5.elf"  "tiva-uart5.hex"
Finished building: tiva-uart5.hex
 
Invoking: GNU Arm Cross Print Size
arm-none-eabi-size --format=berkeley "tiva-uart5.elf"
   text	   data	    bss	    dec	    hex	filename
   3780	     24	    264	   4068	    fe4	tiva-uart5.elf
Finished building: tiva-uart5.siz
 
15:36:02 **** Incremental Build of configuration Debug for project tiva-uart5 ****
make all 
Building file: ../main.c
Invoking: GNU Arm Cross C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mlittle-endian -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -Wall  -g3 -DTM4C123GH6PM -std=gnu11 -MMD -MP -MF"main.d" -MT"main.o" -c -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: tiva-uart5.elf
Invoking: GNU Arm Cross C Linker
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mlittle-endian -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -Wall  -g3 -T "/home/vksalian/Desktop/Practice_2021/UART_TIVAC/eclipse_workspace/tiva-uart5/tm4c123gh6pm.ld" -nostdlib -Wl,-Map,"tiva-uart5.map" -o "tiva-uart5.elf"  ./bsp.o ./main.o ./startup_TM4C123.o ./system_TM4C123.o   
Finished building target: tiva-uart5.elf
 
Invoking: GNU Arm Cross Create Flash Image
arm-none-eabi-objcopy -O ihex "tiva-uart5.elf"  "tiva-uart5.hex"
Finished building: tiva-uart5.hex
 
Invoking: GNU Arm Cross Print Size
arm-none-eabi-size --format=berkeley "tiva-uart5.elf"
   text	   data	    bss	    dec	    hex	filename
   3812	     24	    264	   4100	   1004	tiva-uart5.elf
Finished building: tiva-uart5.siz
 
15:37:44 **** Incremental Build of configuration Debug for project tiva-uart5 ****
make all 
Building file: ../main.c
Invoking: GNU Arm Cross C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mlittle-endian -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -Wall  -g3 -DTM4C123GH6PM -std=gnu11 -MMD -MP -MF"main.d" -MT"main.o" -c -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: tiva-uart5.elf
Invoking: GNU Arm Cross C Linker
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mlittle-endian -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -Wall  -g3 -T "/home/vksalian/Desktop/Practice_2021/UART_TIVAC/eclipse_workspace/tiva-uart5/tm4c123gh6pm.ld" -nostdlib -Wl,-Map,"tiva-uart5.map" -o "tiva-uart5.elf"  ./bsp.o ./main.o ./startup_TM4C123.o ./system_TM4C123.o   
Finished building target: tiva-uart5.elf
 
Invoking: GNU Arm Cross Create Flash Image
arm-none-eabi-objcopy -O ihex "tiva-uart5.elf"  "tiva-uart5.hex"
Finished building: tiva-uart5.hex
 
Invoking: GNU Arm Cross Print Size
arm-none-eabi-size --format=berkeley "tiva-uart5.elf"
   text	   data	    bss	    dec	    hex	filename
   3840	     24	    264	   4128	   1020	tiva-uart5.elf
Finished building: tiva-uart5.siz
 
